test/vm/fails/invalid_conv_integer_256_bit.js

to_string(340282366920938463463374607431768211457);
